# Stellara_Contracts

./: README.md  package-lock.json  package.json
Contracts/: .gitignore  .rustfmt.toml  CODE_QUALITY_GUIDELINES.md  Cargo.toml  DEPLOYMENT.md  GOVERNANCE_TESTING.md  INTEROPERABILITY.md  README.md  RUST_CODING_STANDARDS.md  SOCIAL_REWARDS_FIX_SUMMARY.md  clippy.toml  hardhat.config.js
Contracts/circuits/: accredited_investor.circom
Contracts/contracts/: MultisigTreasury.sol  RevocationRegistry.sol
Contracts/contracts/academy/: Cargo.toml
Contracts/contracts/academy-rewards/: Cargo.toml
Contracts/contracts/amm/: Cargo.toml
Contracts/contracts/cross-chain-router/: Cargo.toml
Contracts/contracts/cross_chain_bridge/: Cargo.toml
Contracts/contracts/did-registry/: Cargo.toml
Contracts/contracts/identity-hub/: Cargo.toml
Contracts/contracts/liquidity-mining/: Cargo.toml
Contracts/contracts/messaging/: Cargo.toml
Contracts/contracts/social_rewards/: Cargo.toml
Contracts/contracts/stablecoin_reserve/: Cargo.toml
Contracts/contracts/staking-rewards/: Cargo.toml
Contracts/contracts/synthetic-assets/: Cargo.toml
Contracts/contracts/tcr/: Cargo.toml
Contracts/contracts/trading/: Cargo.toml  FORMAL_VERIFICATION.md
Contracts/contracts/upgradeability/: Cargo.toml
Contracts/contracts/verifiable-credentials/: Cargo.toml
Contracts/integration-tests/: Cargo.toml  EVENT_TESTING_ANALYSIS.md
Contracts/integration-tests/test_snapshots/: add_collateral_pulls_more_tokens_into_contract.1.json  approver_excluded_from_proposal_subset_cannot_approve.1.json  cancelled_proposal_cannot_be_executed.1.json  cannot_execute_twice.1.json  cdp_full_lifecycle_moves_tokens_end_to_end.1.json  concurrent_proposals_have_independent_state.1.json  duplicate_and_post_quorum_approvals_are_rejected.1.json  fresh_cdp_is_not_liquidatable.1.json  full_2of3_lifecycle_executes_after_timelock.1.json  fuzz_quorum_and_execution_through_contract.1.json  liquidation_burns_debt_and_pays_liquidator.1.json  mint_without_oracle_price_returns_error_no_token_movement.1.json  quorum_not_met_blocks_execution.1.json  register_asset_rejects_liq_cratio_above_min.1.json  rejected_proposal_cannot_be_executed.1.json  simulate_upgrade_across_two_contracts.1.json  test_academy_rewards_trigger_social_rewards.1.json  test_messaging_contract_initializes_successfully.1.json  test_messaging_double_initialization_blocked.1.json  test_messaging_notifications_from_other_contract_flows.1.json  test_shared_governance_module_across_contracts.1.json  test_trading_contract_initializes_successfully.1.json  test_trading_double_initialization_blocked.1.json  test_trading_interacts_with_fee_distribution.1.json  threshold_above_approver_count_is_rejected.1.json  timelock_one_second_early_fails_exact_expiry_succeeds.1.json
Contracts/integration-tests/tests/: cross_contract.rs  governance_flows.rs  initializer_protection.rs  synthetic_assets.rs
Contracts/reports/src/: contract.rs  msg.rs  state.rs
Contracts/scripts/: code-quality-check.sh  format-code.sh  setup-git-hooks.sh
Contracts/scripts/deploy/: deploy_upgradeable.sh
Contracts/shared/: Cargo.toml
Contracts/shared/src/: acl.rs  events.rs  governance.rs  lib.rs  nonce.rs  reentrancy_guard.rs
Contracts/shared/test_snapshots/: approver_not_in_proposal_list_is_unauthorized.1.json  cancel_overwrites_a_rejected_proposal.1.json  cannot_execute_before_approval.1.json  duplicate_approval_is_rejected.1.json  empty_approver_set_cannot_form_a_quorum.1.json  execution_is_permissionless_for_any_address.1.json  fuzz_quorum_flips_exactly_at_threshold.10.json  fuzz_quorum_flips_exactly_at_threshold.11.json  fuzz_quorum_flips_exactly_at_threshold.12.json  fuzz_quorum_flips_exactly_at_threshold.13.json  fuzz_quorum_flips_exactly_at_threshold.14.json  fuzz_quorum_flips_exactly_at_threshold.15.json  fuzz_quorum_flips_exactly_at_threshold.16.json  fuzz_quorum_flips_exactly_at_threshold.17.json  fuzz_quorum_flips_exactly_at_threshold.18.json  fuzz_quorum_flips_exactly_at_threshold.19.json  fuzz_quorum_flips_exactly_at_threshold.2.json  fuzz_quorum_flips_exactly_at_threshold.20.json  fuzz_quorum_flips_exactly_at_threshold.21.json  fuzz_quorum_flips_exactly_at_threshold.3.json  fuzz_quorum_flips_exactly_at_threshold.4.json  fuzz_quorum_flips_exactly_at_threshold.5.json  fuzz_quorum_flips_exactly_at_threshold.6.json  fuzz_quorum_flips_exactly_at_threshold.7.json  fuzz_quorum_flips_exactly_at_threshold.8.json  fuzz_quorum_flips_exactly_at_threshold.9.json  fuzz_timelock_boundary_enforced.1.json  get_unknown_proposal_returns_not_found.1.json  non_admin_cannot_propose.1.json  proposal_ids_increment_independently.1.json  reject_blocks_subsequent_approval_and_execution.1.json  single_approver_single_threshold_approves_immediately.1.json  threshold_greater_than_approvers_is_rejected.1.json  unknown_address_cannot_approve.1.json  (+1 more)
Contracts/shared/tests/: governance.rs
Contracts/test/: MultisigTreasury.test.js  RevocationRegistry.test.js
(+536 files in other folders)
