[workspace]
members = [
    "contracts/trading",
    "contracts/social_rewards",
    "contracts/messaging",
    "contracts/academy",
    "contracts/academy-rewards",
    "contracts/synthetic-assets",

    "contracts/tcr",
    "contracts/cross-chain-router",
    "contracts/amm",
    "integration-tests",
    "shared",
    "contracts/upgradeability",
]
resolver = "2"