[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { version = "26.0.0", default-features = false, features = ["alloc"] }
ed25519-dalek = ">=2.0.0, <3.0.0"

[dev-dependencies]
soroban-sdk = { version = "26.0.0", features = ["testutils"], default-features = false }
