[package]
name = "cross-chain-router"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = "26.0.0"
soroban-spec = "26.0.0"
shared = { path = "../../shared" }

[dev-dependencies]
soroban-sdk = { version = "26.0.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
